--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -5,11 +5,11 @@ on:
     branches:
       - dev
 
-env:
-  AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-  AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+# env:
+#   AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#   AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+#   AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+#   AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
 jobs:
   tf-plan:
@@ -24,17 +24,25 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # - name: Azure Login
+      #   uses: azure/login@v2
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # Initialize terraform
       - name: Initialize
         run: |
           pushd ./infra
+          echo $FAKE
+          echo $AZURE_SUBSCRIPTION_ID
           terraform init
           popd
+        env:
+          FAKE: 'fake_var'
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
       # Terraform Plan
       - name: "Terraform Plan"
