--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -28,10 +28,12 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      # - name: Azure Login
-      #   uses: azure/login@v2
-      #   with:
-      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       # Initialize terraform
       - name: Initialize
