--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -18,6 +18,11 @@ jobs:
   tf-plan:
     name: Plan
     runs-on: ubuntu-latest
+    env:
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     steps:
       # Checkout the code
       - name: Checkout
@@ -27,24 +32,12 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      # - name: Azure Login
-      #   uses: azure/login@v2
-      #   with:
-      #     client-id: ${{ secrets.ARM_CLIENT_ID }}
-      #     tenant-id: ${{ secrets.ARM_TENANT_ID }}
-      #     subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-
       # Initialize terraform
       - name: Initialize
         run: |
           pushd ./infra
           terraform init
           popd
-        env:
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       # Terraform Plan
       - name: "Terraform Plan"
@@ -55,4 +48,10 @@ jobs:
             -out=plan.tfplan \
             -var="project=${{env.PROJECT}}"
           popd
-        continue-on-error: true
+
+      # Upload plan file as artifact
+      - name: "Upload Plan Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: terraform-plan
+          path: infra/plan.tfplan
