Remove random provider

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -19,6 +19,7 @@ jobs:
     name: Plan
     runs-on: ubuntu-latest
     env:
+      PROJECT: owaspjuiceshop
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
