--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -4,26 +4,19 @@ on:
   push:
     branches:
       - dev
+  workflow_dispatch:
 
 env:
-  AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-
-permissions:
-  id-token: write
-  contents: read
+  PROJECT: owaspjuiceshop
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
 jobs:
   tf-plan:
     name: Plan
     runs-on: ubuntu-latest
-    env:
-      PROJECT: owaspjuiceshop
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     steps:
       # Checkout the code
       - name: Checkout
@@ -51,8 +44,40 @@ jobs:
           popd
 
       # Upload plan file as artifact
-      - name: "Upload Plan Artifact"
+      - name: Upload Plan
         uses: actions/upload-artifact@v3
         with:
           name: terraform-plan
           path: infra/plan.tfplan
+
+  tf-apply:
+    name: Apply
+    runs-on: ubuntu-latest
+    needs: tf-plan
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Download Plan
+        uses: actions/download-artifact@v3
+        with:
+          name: terraform-plan
+          path: .
+
+      # Checkout the code
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Initialize terraform
+      - name: Initialize
+        run: |
+          pushd ./infra
+          terraform init
+          popd
+
+      # Terraform Plan
+      - name: "Terraform Apply"
+        id: apply
+        run: |
+          pushd ./infra
+          terraform apply plan.tfplan \
+            -var="project=${{env.PROJECT}}"
+          popd
