--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -76,6 +76,5 @@ jobs:
         id: apply
         run: |
           pushd ./infra
-          terraform apply plan.tfplan \
-            -var="project=${{env.PROJECT}}"
+          terraform apply plan.tfplan
           popd
