--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: terraform-plan
-          path: .
+          path: ./infra
 
       # Initialize terraform
       - name: Initialize
